# sunspot

./: .clang-format  .gitignore  .gitmodules  .ycm_extra_conf.py  CMakeLists.txt  Doxyfile  LICENSE.md  README.md  compile-android.sh  compile-linux.sh  compile-run-linux.sh  compile-run-win.bat  compile-run-win.sh  compile-run.sh  compile-test.c  compile-win.bat  config.h.in  gen-mac.sh  overhead.plt  profiling.plt  renderpasses.plt  stereoscopic-test.c
android/: build.gradle  local.properties
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/assets/shader/: android.frag  base.vert
android/app/src/main/java/me/fahien/sunspot/: SunSpotActivity.java  SunSpotLib.java  SunSpotView.java  SunspotApplication.java  SunspotNativeActivity.java
android/app/src/main/res/values/: strings.xml
android/gradle/wrapper/: gradle-wrapper.properties
cmake/: AddDataSpot.cmake  AddFileSpot.cmake  AddGlew.cmake  AddGlfw.cmake  AddGltfSpot.cmake  AddHitSpot.cmake  AddLogSpot.cmake  AddMathSpot.cmake  AddPySpot.cmake  FindPythonLibraries.cmake  FindSOIL.cmake
data/cube/: crate.mtl  cube.mtl
data/farmhouse/: farmhouse.mtl
data/frigate/: frigate-blender.mtl
extension/sunspot/: Sunspot.json
extension/sunspot/component/: Rigidbody.json  Transform.json  Vec3.json
extension/sunspot/enum/: Key.json
extension/sunspot/input/: Action.json  Input.json  Key.json  Type.json
extension/sunspot/math/: Vec2.json
include/: SunSpotConfig.h
include/sunspot/android/: Gesture.h  Renderer.h  String.h  SunSpot.h  gl3stub.h
include/sunspot/component/: Camera.h  Collider.h  Model.h  Rigidbody.h  Transform.h
include/sunspot/core/: Animations.h  Collisions.h  Config.h  Game.h  GlfwWindow.h  Gui.h  Renderer.h  Scene.h  Scripts.h  ShaderProgram.h  String.h
include/sunspot/core/android/: App.h
include/sunspot/editor/: Editor.h
include/sunspot/entity/: Entity.h  Object.h  Script.h
include/sunspot/extension/: Sunspot.incl.cpp
include/sunspot/graphics/: Exception.h  Framebuffer.h  Graphics.h  Light.h  Material.h  Shader.h  Texture.h
include/sunspot/graphics/gl/: Ebo.h  Gl.h  Renderer.h  Vao.h  Vbo.h
include/sunspot/input/: Action.h  Input.h  Key.h  Type.h
include/sunspot/system/: Collision.h  Graphic.h
include/sunspot/system/graphic/: Exception.h  Framebuffer.h  Gl.h  Light.h  Material.h  Shader.h  Texture.h
include/sunspot/system/graphics/: Framebuffer.h  Graphics.h  Light.h  Material.h  Shader.h  Texture.h
include/sunspot/util/: Config.h  Cube.h  Export.h  Export.hpp  Util.h
script/: build-module.py
shader/: android.frag  android.vert  base.frag  base.vert  depth.frag  quad.frag  quad.vert  shape.frag  shape.vert  white.frag
source/: Camera.cpp  Camera.h  Color.cpp  Color.h  Cursor.cpp  Cursor.h  Framebuffer.cpp  Framebuffer.h  GlfwWindow.cpp  GlfwWindow.h  Graphics.h  Ifstream.cpp  Light.cpp  Light.h  Logger.cpp  Main.cpp  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Quad.cpp  Quad.h  ShaderProgram.cpp  ShaderProgram.h  SunSpotConfig.h.in  Texture.cpp  Texture.h  WavefrontObject.cpp  WavefrontObject.h  Window.cpp  Window.h
source/android/: Gesture.h  Renderer.cpp  ShaderProgram.cpp  ShaderProgram.h  String.cpp  SunSpot.cpp  gl3stub_wrapper.c
source/collision/: BoundingBox.cpp  BoundingBox.h  CollisionSystem.cpp  CollisionSystem.h
source/component/: Camera.cpp  Collider.h  Model.h  Transform.cpp  Transform.json  TransformComponent.json  Vec3.json
source/core/: Animations.cpp  Collisions.cpp  Config.cpp  Game.cpp  Gesture.cpp  GlfwWindow.cpp  Gui.cpp  Renderer.cpp  Scripts.cpp  ShaderProgram.cpp  String.cpp  SunSpot.cpp
source/core/android/: App.cpp  Graphics.cpp  Renderer.cpp  SunspotNativeActivity.cpp
source/data/: EntityData.cpp  EntityData.h
source/editor/: Editor.cpp
source/entity/: Entity.cpp  Entity.h  Object.cpp  PyType.cpp  Script.cpp  Script.h
source/graphics/: Framebuffer.cpp  Graphics.cpp  Light.cpp  Material.cpp  Shader.cpp  Texture.cpp
source/graphics/gl/: Ebo.cpp  Renderer.cpp  Vao.cpp  Vbo.cpp
source/input/: Input.h
source/repository/: EntityRepository.cpp  EntityRepository.h  ModelRepository.cpp  ModelRepository.h
source/system/: Collision.cpp  Collision.h  Graphic.cpp
source/system/graphic/: Framebuffer.cpp  Light.cpp  Material.cpp  Shader.cpp  Texture.cpp
source/system/graphics/: Framebuffer.cpp  Graphics.cpp  Light.cpp  Material.cpp  Shader.cpp  Texture.cpp
source/util/: Config.cpp  Cube.cpp  Export.cpp  Util.cpp
source/view/: GltfCamera.cpp  GltfCamera.h  GltfMesh.cpp  GltfMesh.h  GltfPrimitive.cpp  GltfPrimitive.h  GltfRenderer.cpp  GltfRenderer.h
src/: Camera.cpp  Camera.h  Color.cpp  Color.h  Config.h.in  Cursor.cpp  Cursor.h  Framebuffer.cpp  Framebuffer.h  GlfwWindow.cpp  GlfwWindow.h  Graphics.h  Ifstream.cpp  Ifstream.h  Light.cpp  Light.h  Logger.cpp  Logger.h  Main.cpp  Material.cpp  Material.h  Math.cpp  Math.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Quad.cpp  Quad.h  SdlWindow.cpp  SdlWindow.h  ShaderProgram.cpp  ShaderProgram.h  Texture.cpp  Texture.h  WavefrontObject.cpp  WavefrontObject.h  Window.cpp  Window.h
src/android/: AssetManager.cpp  AssetManager.h  ShaderProgram.cpp
src/collision/: BoundingBox.h
test/: Tests.cmake  gsp-integration-test.cpp  gst-integration-test.cpp
